<resources>
    <string name="app_name">stockanalysis</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>
    <string name="summary">Summary</string>
    <string name="sum">Summary</string>
    <string name="place_holder">Place Holder</string>
    <string name="generate_stock_list">Generate Stock List</string>
    <string name="todo">TODO</string>
    <string name="profile_name">Profile Name</string>
    <string name="current_balance">Current Balance</string>
    <string name="date_created">Date Created</string>
    <string name="company_name">Company Name</string>
    <string name="_8888">8888</string>
    <string name="intiatial_balance">Intiatial Balance</string>
    <string name="create">Create</string>
    <string name="ticker">Ticker</string>
    <string name="number_of_shares">Number of Shares</string>
    <string name="buy">Buy</string>
    <string name="sell">Sell</string>
    <string name="current_holding">Current Holding</string>
    <string name="current_share_held_1_s">Current Share Held: %1$s</string>
    <string name="trade">Trade</string>
    <string name="submit">Submit</string>
</resources>
