<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.portfolio.PortfolioFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:orientation="horizontal"
        android:padding="3dp">
        <Spinner
            android:layout_gravity="center_vertical"
            android:layout_width="0dp"
            android:layout_weight="0.9"
            android:layout_height="wrap_content"
            android:id="@+id/portfolioSelect"/>
        <ImageView
            android:id="@+id/addPortfolio"
            android:layout_gravity="center_vertical"
            android:layout_width="0dp"
            android:src="@drawable/ic_baseline_add_circle_outline_24"
            android:layout_weight="0.1"
            android:layout_height="wrap_content"
            android:contentDescription="@string/todo" />
    </LinearLayout>
    <TableLayout
        android:padding="10dp"
        android:stretchColumns="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/portfolioInformation">
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="10dp">
            <TextView
                android:text="@string/profile_name"
                android:layout_column="1"
                android:layout_gravity="start"/>
            <TextView
                android:text="@string/place_holder"
                android:id="@+id/profile_name"
                android:layout_column="2"/>
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="10dp">
            <TextView
                android:text="@string/current_balance"
                android:layout_column="1"/>
            <TextView
                android:text="@string/place_holder"
                android:id="@+id/current_balance"
                android:layout_column="2"/>
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="10dp">
            <TextView
                android:text="@string/date_created"
                android:layout_column="1"/>
            <TextView
                android:text="@string/place_holder"
                android:id="@+id/date_created"
                android:layout_column="2"/>
        </TableRow>
    </TableLayout>
    <ExpandableListView
        android:id="@+id/holdingList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:dividerHeight="10dp"
        />
</LinearLayout>