<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp">
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/profile_name"
        android:autofillHints=""
        android:id="@+id/input_profile_name"
        android:inputType="text"
        android:layout_marginBottom="10dp"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/intiatial_balance"
        android:autofillHints=""
        android:id="@+id/input_profile_amount"
        android:inputType="number"
        android:layout_marginBottom="10dp"/>
    <Button
        android:id="@+id/btn_create_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:text="@string/create"
        style="@android:style/Widget.Holo.Button.Borderless"
        android:textColor="@color/colorPrimaryDark"/>

    <com.visight.util.TextPairView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:labelText="Current Price"/>

    <com.visight.util.TextPairView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:labelText="Total Consideration"/>
</LinearLayout>