<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="10dp">
    <View
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:background="@color/colorPrimaryDark"
        android:layout_marginBottom="10dp"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/heading"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/stock_name"
        app:layout_constraintTop_toBottomOf="@id/heading"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        android:textSize = "12sp"
        android:textStyle="bold"
        android:text="@string/company_name"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/stock_name"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/place_holder"
        android:textSize="12sp"
        android:id="@+id/company_ticker"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/company_share_count"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/_8888"
        app:layout_constraintTop_toTopOf="@id/company_ticker"
        android:textSize="12sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/company_ticker"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/place_holder"
        android:textSize="12sp"
        android:id="@+id/current_price"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/average_price"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/_8888"
        app:layout_constraintTop_toTopOf="@id/current_price"
        android:textSize="12sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="13sp"
        android:textStyle="bold"
        android:text="@string/_8888"
        android:id="@+id/totalCost"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/current_price"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="13sp"
        android:textStyle="bold"
        android:text="@string/_8888"
        android:id="@+id/current_value"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/current_price"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="13sp"
        android:textStyle="bold"
        android:text="@string/_8888"
        android:id="@+id/gain_loss"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/current_price"
        />
</androidx.constraintlayout.widget.ConstraintLayout>